--- a/physiqueUDSLatex.sty
+++ b/physiqueUDSLatex.sty
@@ -2,6 +2,8 @@
 \usepackage[T1]{fontenc}      % un second package
 \usepackage[top=2cm, bottom=2cm, left=2cm,right=2cm]{geometry}		%pour les marges
 
+\usepackage{fancyhdr} %pour les en_tetes et bas_de_pages
+
 \usepackage{enumitem} %pour les liste à puces
 
 \usepackage{soul} %Permet de surligner du texte
