--- a/template_CV.tex
+++ b/template_CV.tex
@@ -1,7 +1,7 @@
 # LaTeX-
 
 \documentclass[twoside,letterpaper,12pt]{article}
-\usepackage{physiqueUDSLatex}
+\usepackage{biblio}
 
 \begin{document}
 
