--- a/biblio.sty
+++ b/biblio.sty
@@ -3,6 +3,8 @@
 
 \usepackage{fancyhdr} %pour les en_tetes et bas_de_pages
 
+\usepackage{float}
+
 \fancypagestyle{firststyle} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle})
 {
    \renewcommand{\headrulewidth}{0pt}
@@ -10,7 +12,28 @@
    \fancyfoot[C]{\thepage}
 }
 
+
+%Commandes en-tête pied de pages
+%\fancyhead[C]{Introduction \LaTeX} 
+%\fancyhead[L]{U de S}
+%\fancyhead[R]{\date{\today}}
+
+%\renewcommand{\footrulewidth}{0.5pt}
+%\fancyfoot[C]{\textbf{page} \thepage} 
+%\fancyfoot[L]{\rightmark}
+%\fancyfoot[R]{\textbf{Section \thesection}} 
+
+
+
+\def\headline#1{\hbox to \hsize{\hrulefill\quad\lower.3em\hbox{#1}\quad\hrulefill}} %Permet de faire des lignes tronqué au centre
+
+%\AddThinSpaceBeforeFootnotes
+%\FrenchFootnotes %notes
+
 \usepackage{enumitem} %pour les liste à puces
+
+\renewcommand{\labelenumii}{\theenumii}
+\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.} %pour les liste a puce et autres
 
 \usepackage{soul} %Permet de surligner du texte
 
@@ -22,6 +45,9 @@
 
 \usepackage{color}
 \newcommand{\hilight}[1]{\colorbox{lightgray}{#1}} %Autre méthode de surlignage
+
+%Commande pour surligner
+%\hilight{}
 
 %Trucs qu'il faut utiliser parce qu'on don't "Speak White"
 \usepackage[utf8]{inputenc} % latin1        % Suppport de Latex pour les accents
@@ -41,28 +67,28 @@
 
 %Truc pour faire des pages titres de bad ass parceque je suis un bad ass parce que c'est super bad ass
 \newcommand*{\titre}[1]{\def\LeTitre{#1}}
-\newcommand*{\sousTitre}[1]{\def\LeSousTitre{#1}}
-\newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
-\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
+%\newcommand*{\sousTitre}[1]{\def\LeSousTitre{#1}}
+%\newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
+%\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
 \newcommand*{\auteurs}[1]{\def\NomDesAuteurs{#1}}
 \renewcommand*{\date}[1]{\def\LaDate{#1}}
 \newcommand\pageTitre{
     \thispagestyle{empty}
     \begin{titlepage}
-      \begin{center}      %Le tout sera centré
-      {\Large \LeTitreDuCours}\\
-      {\large \LaCoteDuCours\par}
+       \begin{center}      %Le tout sera centré
+      %{\Large \LeTitreDuCours\\}
+      %{\large \LaCoteDuCours\par}
       \vfill
-      {\huge \bf \LeTitre }\\
-      {\LARGE \bf \underline \LeSousTitre}
+      {\huge \bf \LeTitre\\}
+      %{\LARGE \bf \underline \LeSousTitre}
       \vfill
       {\LARGE Par \par}
-      \bigskip
+      \bigskip{}
       {\large \NomDesAuteurs \par}
       \vfill
       {\Large Faculté des sciences \\ Département de physique}
       \vfill
-      {\large \LaDate }\\
+      {\large \LaDate \\}
       {\large Université de Sherbrooke}
       %imprime les information \vfill permet d'équilibrer l'espacement vertical
         \end{center}
@@ -77,6 +103,15 @@
   \global\let\date\relax
   \cleardoublepage %oblige latex à 1. placer tout ce qu'il y a plus haut 2. à faire qu'en mode recto verso la page suivante soit à droite {superbe}
 }
+
+%Commandes page titre:
+%\titre  {Introduction \LaTeX}
+%\sousTitre {}
+%\titreDuCours{}
+%\coteDuCours{}
+%\auteurs{Olivier Bernard}
+%\date{\today} 
+%\pageTitre %Place la page titre
 
 %Permet de créer des liens dynamiques dans le document
 \usepackage{hyperref}
