--- a/biblio.sty
+++ b/biblio.sty
@@ -1,9 +1,9 @@
 \usepackage[T1]{fontenc}      % un second package
-\usepackage[top=2cm, bottom=2.5cm, left=2cm,right=2cm]{geometry}		%pour les marges
+\usepackage[top=2.5cm, bottom=2.5cm, left=2cm,right=2cm]{geometry}		%pour les marges
 
 \usepackage{fancyhdr} %pour les en_tetes et bas_de_pages
 
-\usepackage{float}
+\usepackage{float} %pour déplacer les trucs lala
 
 \usepackage{cancel}
 \usepackage{physics}
@@ -12,11 +12,19 @@
 {
    \renewcommand{\headrulewidth}{0pt}
    \fancyhf{}
-   \fancyfoot[C]{\thepage}
+   \fancyfoot[R]{\thepage}
+}
+
+\fancypagestyle{firststyle2} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle2})
+{
+   \renewcommand{\headrulewidth}{0pt}
+   \renewcommand{\footrulewidth}{0pt}
+   \fancyhf{}
 }
 
 
 %Commandes en-tête pied de pages
+%\renewcommand{\headrulewidth}{0.5pt}
 %\fancyhead[C]{Introduction \LaTeX} 
 %\fancyhead[L]{U de S}
 %\fancyhead[R]{\date{\today}}
@@ -73,6 +81,7 @@
 %\newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
 %\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
 %\newcommand*{\auteurs}[1]{\def\NomDesAuteurs{#1}}
+%\newcommand*{\correcteur}[1]{\def\correcteur{#1}}
 %\renewcommand*{\date}[1]{\def\LaDate{#1}}
 %\newcommand\pageTitre{
 %    \thispagestyle{empty}
@@ -82,29 +91,35 @@
 %      {\large \LaCoteDuCours\par}
 %      \vfill
 %      {\huge \bf \LeTitre\\}
-%      %{\LARGE \bf \underline \LeSousTitre}
+%      \vspace{1mm}
+%      {\LARGE \bf \underline \LeSousTitre}
 %      \vfill
 %      {\LARGE Par \par}
 %      \bigskip{}
 %      {\large \NomDesAuteurs \par}
+%      \vfill
+%      {\Large Présenté à \par}
+%      \bigskip{}
+%      {\large \correcteur }
 %      \vfill
 %      {\Large Faculté des sciences \\ Département de physique}
 %      \vfill
 %      {\large \LaDate \\}
 %      {\large Université de Sherbrooke}
       %imprime les information \vfill permet d'équilibrer l'espacement vertical
-%        \end{center}
+%       \end{center}
 %  \end{titlepage}
   %Libère les nom de fonction
 %  \global\let\titre\relax
 %  \global\let\pageTitre\relax
 %  \global\let\sousTitre\relax
 %  \global\let\titreDuCours\relax
- % \global\let\coteDucours\relax
- %\global\let\auteurs\relax
+%  \global\let\coteDucours\relax
+% \global\let\auteurs\relax
 %  \global\let\date\relax
+%  \thispagestyle{firststyle2}
 %  \cleardoublepage %oblige latex à 1. placer tout ce qu'il y a plus haut 2. à faire qu'en mode recto verso la page suivante soit à droite {superbe}
-%}
+}
 
 %Commandes page titre:
 %\titre  {Introduction \LaTeX}
@@ -112,6 +127,7 @@
 %\titreDuCours{}
 %\coteDuCours{}
 %\auteurs{Olivier Bernard}
+%\correcteur{nom du correcteur s'il y a lieu}
 %\date{\today} 
 %\pageTitre %Place la page titre
 
