--- a/biblio.sty
+++ b/biblio.sty
@@ -116,6 +116,7 @@
 %  \global\let\titreDuCours\relax
 %  \global\let\coteDucours\relax
 % \global\let\auteurs\relax
+% \global\let\correcteur\relax
 %  \global\let\date\relax
 %  \thispagestyle{firststyle2}
 %  \cleardoublepage %oblige latex à 1. placer tout ce qu'il y a plus haut 2. à faire qu'en mode recto verso la page suivante soit à droite {superbe}
