--- a/biblio.sty
+++ b/biblio.sty
@@ -1,63 +1,30 @@
 \usepackage[T1]{fontenc}      % un second package
-\usepackage[top=2.5cm, bottom=2.5cm, left=2cm,right=2cm]{geometry}		%pour les marges
+\usepackage[top=2cm, bottom=2cm, left=2cm,right=2cm]{geometry}		%pour les marges
 
 \usepackage{fancyhdr} %pour les en_tetes et bas_de_pages
 
-\usepackage{float} %pour déplacer les trucs lala
-
-\usepackage{cancel}
-\usepackage{physics}
-
-\fancypagestyle{firststyle} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle})
-{
-   \renewcommand{\headrulewidth}{0pt}
-   \fancyhf{}
-   \fancyfoot[R]{\thepage}
-}
-
-\fancypagestyle{firststyle2} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle2})
-{
-   \renewcommand{\headrulewidth}{0pt}
-   \renewcommand{\footrulewidth}{0pt}
-   \fancyhf{}
-}
-
-
-%Commandes en-tête pied de pages
-%\renewcommand{\headrulewidth}{0.5pt}
-%\fancyhead[C]{Introduction \LaTeX} 
-%\fancyhead[L]{U de S}
-%\fancyhead[R]{\date{\today}}
-
-%\renewcommand{\footrulewidth}{0.5pt}
-%\fancyfoot[C]{\textbf{page} \thepage} 
-%\fancyfoot[L]{\rightmark}
-%\fancyfoot[R]{\textbf{Section \thesection}} 
-
-
-
-\def\headline#1{\hbox to \hsize{\hrulefill\quad\lower.3em\hbox{#1}\quad\hrulefill}} %Permet de faire des lignes tronqué au centre
+\usepackage{float}
 
 %\AddThinSpaceBeforeFootnotes
 %\FrenchFootnotes %notes
 
+\usepackage{cancel}
+\usepackage{physics}
+
 \usepackage{enumitem} %pour les liste à puces
-\renewcommand{\labelenumii}{\theenumii}
-\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.} %pour les liste a puce et autres
 
 \usepackage{soul} %Permet de surligner du texte
 
 \usepackage{mathrsfs} %Le symbole de Lagrange
 
-
-
+%\usepackage{wasysym}
 \usepackage{marvosym} %symbole de téléphone et autres
 
 \usepackage{color}
-\newcommand{\hilight}[1]{\colorbox{lightgray}{#1}} %Autre méthode de surlignage
 
-%Commande pour surligner
-%\hilight{}
+%Permet de créer des liens dynamiques dans le document
+\usepackage{hyperref}
+
 
 %Trucs qu'il faut utiliser parce qu'on don't "Speak White"
 \usepackage[utf8]{inputenc} % latin1        % Suppport de Latex pour les accents
@@ -75,69 +42,6 @@
 \usepackage{tikz}
 \usepackage{graphicx}
 
-%Truc pour faire des pages titres de bad ass parceque je suis un bad ass parce que c'est super bad ass
-%\newcommand*{\titre}[1]{\def\LeTitre{#1}}
-%\newcommand*{\sousTitre}[1]{\def\LeSousTitre{#1}}
-%\newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
-%\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
-%\newcommand*{\auteurs}[1]{\def\NomDesAuteurs{#1}}
-%\newcommand*{\correcteur}[1]{\def\correcteur{#1}}
-%\renewcommand*{\date}[1]{\def\LaDate{#1}}
-%\newcommand\pageTitre{
-%    \thispagestyle{empty}
-%    \begin{titlepage}
-%       \begin{center}      %Le tout sera centré
-%      {\Large \LeTitreDuCours\\}
-%      {\large \LaCoteDuCours\par}
-%      \vfill
-%      {\huge \bf \LeTitre\\}
-%      \vspace{1mm}
-%      {\LARGE \bf \underline \LeSousTitre}
-%      \vfill
-%      {\LARGE Par \par}
-%      \bigskip{}
-%      {\large \NomDesAuteurs \par}
-%      \vfill
-%      {\Large Présenté à \par}
-%      \bigskip{}
-%      {\large \correcteur }
-%      \vfill
-%      {\Large Faculté des sciences \\ Département de physique}
-%      \vfill
-%      {\large \LaDate \\}
-%      {\large Université de Sherbrooke}
-      %imprime les information \vfill permet d'équilibrer l'espacement vertical
-%       \end{center}
-%  \end{titlepage}
-  %Libère les nom de fonction
-%  \global\let\titre\relax
-%  \global\let\pageTitre\relax
-%  \global\let\sousTitre\relax
-%  \global\let\titreDuCours\relax
-%  \global\let\coteDucours\relax
-% \global\let\auteurs\relax
-% \global\let\correcteur\relax
-%  \global\let\date\relax
-%  \thispagestyle{firststyle2}
-%  \cleardoublepage %oblige latex à 1. placer tout ce qu'il y a plus haut 2. à faire qu'en mode recto verso la page suivante soit à droite {superbe}
-}
-
-%Commandes page titre:
-%\titre  {Introduction \LaTeX}
-%\sousTitre {}
-%\titreDuCours{}
-%\coteDuCours{}
-%\auteurs{Olivier Bernard}
-%\correcteur{nom du correcteur s'il y a lieu}
-%\date{\today} 
-%\pageTitre %Place la page titre
-
-%Permet de créer des liens dynamiques dans le document
-\usepackage{hyperref}
-
-%Commandes permetant de référencer plus simplement les figures et équation
-\newcommand{\figref}[1]{figure (\ref{#1})}		%Figure
-\renewcommand{\eqref}[1]{équation (\ref{#1})}		%Équation
 %Permet d'insérer des boutes en format paysage
 \usepackage{pdflscape}
 
@@ -151,9 +55,124 @@
 %Pour insérer du code pis que ce soit beau
 \usepackage[most]{tcolorbox}
 
+\def\headline#1{\hbox to \hsize{\hrulefill\quad\lower.3em\hbox{#1}\quad\hrulefill}} %Permet de faire des lignes tronqué au centre
+
+\fancypagestyle{firststyle} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle})
+{
+   \renewcommand{\headrulewidth}{0pt}
+   \fancyhf{}
+   \fancyfoot[C]{\thepage}
+}
+
+
+\fancypagestyle{firststyle2} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle2})
+{
+   \renewcommand{\headrulewidth}{0pt}
+   \renewcommand{\footrulewidth}{0pt}
+   \fancyhf{}
+}
+
+%Commandes en-tête pied de pages
+%\fancyhead[C]{Introduction \LaTeX} 
+%\fancyhead[L]{U de S}
+%\fancyhead[R]{\date{\today}}
+
+%\renewcommand{\footrulewidth}{0.5pt}
+%\fancyfoot[C]{\textbf{page} \thepage} 
+%\fancyfoot[L]{\rightmark}
+%\fancyfoot[R]{\textbf{Section \thesection}} 
+
+
+%Faire un en-tête de devoir
+\newcommand*{\redacteur}[3]{\def\Nomredacteur{#1  \hfill #3 \\ #2}}
+\newcommand*{\coteCours}[1]{\def\CoteDuCours{#1}}
+\newcommand*{\nodev}[1]{\def\NoDev{#1}}
+\newcommand*{\leDate}[1]{\def\LeDate{#1}}
+\newcommand\entete{
+    \thispagestyle{firststyle}
+    \flushleft
+    \begin{minipage}{17cm}
+    {\Large \Nomredacteur \par} 
+    \vspace{2mm}
+    {\large \CoteDuCours}
+    \end{minipage}
+    
+    \vspace{1cm}
+    \headline{\textbf{{\Large DEVOIR \NoDev}}}
+    \vspace{1cm}
+}
+
+%Commande pour faire une en-tête
+%\redacteur{NOM1}{NOM2}{28/10/16}
+%\coteCours{CODE DU COURS}
+%\titreDuCours{NOM DU COURS}
+%\nodev{Numéros du devoir}
+%\entete
+
+%Truc pour faire des pages titres de bad ass parceque je suis un bad ass parce que c'est super bad ass
+\newcommand*{\titre}[1]{\def\LeTitre{#1}}
+\newcommand*{\sousTitre}[1]{\def\LeSousTitre{#1}}
+\newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
+%\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
+\newcommand*{\auteurs}[1]{\def\NomDesAuteurs{#1}}
+\renewcommand*{\date}[1]{\def\LaDate{#1}}
+\newcommand\pageTitre{
+    \thispagestyle{empty}
+    \begin{titlepage}
+       \begin{center}      %Le tout sera centré
+      %{\Large \LeTitreDuCours\\}
+      %{\large \LaCoteDuCours\par}
+      \vfill
+      {\huge \bf \LeTitre\\}
+      \vspace{2mm}
+      {\LARGE \bf \underline \LeSousTitre}
+      \vfill
+      {\LARGE Par \par}
+      \bigskip{}
+      {\large \NomDesAuteurs \par}
+      \vfill
+      {\Large Faculté des sciences \\ Département de physique}
+      \vfill
+      {\large \LaDate \\}
+      {\large Université de Sherbrooke}
+      %imprime les information \vfill permet d'équilibrer l'espacement vertical
+        \end{center}
+  \end{titlepage}
+  %Libère les nom de fonction
+  \global\let\titre\relax
+  \global\let\pageTitre\relax
+  \global\let\sousTitre\relax
+  \global\let\titreDuCours\relax
+  \global\let\coteDucours\relax
+  \global\let\auteurs\relax
+  \global\let\date\relax
+  \thispagestyle{firststyle2}
+  \cleardoublepage %oblige latex à 1. placer tout ce qu'il y a plus haut 2. à faire qu'en mode recto verso la page suivante soit à droite {superbe}
+}
+
+%Commandes page titre après le \begin{document}:
+%\titre  {Introduction \LaTeX}
+%\sousTitre {}
+%\titreDuCours{}
+%\coteDuCours{}
+%\auteurs{Olivier Bernard}
+%\date{\today} 
+%\pageTitre %Place la page titre
+
+\renewcommand{\labelenumii}{\theenumii}
+\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.} %pour les liste a puce et autres
+
+\newcommand{\hilight}[1]{\colorbox{lightgray}{#1}} %Autre méthode de surlignage
+
+%Commande pour surligner
+%\hilight{}
+
+%Commandes permetant de référencer plus simplement les figures et équation
+\newcommand{\figref}[1]{figure (\ref{#1})}		%Figure
+\renewcommand{\eqref}[1]{équation (\ref{#1})}		%Équation
 
 \newcounter{pythoncode}							%Cré un nouveau compteur pour les blocs de pythoncode (ajouter [section] pour permettre de reset le compteur à toutes les sections
-\newtcblisting{pythoncode}[2]{			%Permet de placer du code dans le texte pis que ce sois beau
+\newtcblisting{pythoncode}[2][]{			%Permet de placer du code dans le texte pis que ce sois beau
 	phantom={\stepcounter{pythoncode}},				%"phantom" execute un segmant de code. "\stepcounter" permet d'incrémenter le compteur
 	enhanced,							%Permet de faire des choses plus cool
 	breakable,
