--- a/biblio.sty
+++ b/biblio.sty
@@ -45,6 +45,8 @@
 %Permet d'insérer des boutes en format paysage
 \usepackage{pdflscape}
 
+\usepackage{pdfpages}
+
 %Couleur personnalisées 
 \usepackage{xcolor}				%permet de créer des couleurs personnalisés
 \definecolor{bleu}{RGB}{184,212,222}		
