--- a/biblio.sty
+++ b/biblio.sty
@@ -59,6 +59,12 @@
 %Pour insérer du code pis que ce soit beau
 \usepackage[most]{tcolorbox}
 
+%Faire uno table des matières
+%\tableofcontents
+
+%Définir le type de numérotation de page
+%\pagenumbering{arabic}
+
 \def\headline#1{\hbox to \hsize{\hline{3cm}\quad\lower.3em\hbox{#1}\quad\hrulefill}} %Permet de faire des lignes tronqué au centre
 
 \fancypagestyle{firststyle} %pnouvelle commande pour modifier en-tête d'une page (spécifié avec \thispagestyle{firststyle})
@@ -116,15 +122,16 @@
 \newcommand*{\titre}[1]{\def\LeTitre{#1}}
 \newcommand*{\sousTitre}[1]{\def\LeSousTitre{#1}}
 \newcommand*{\titreDuCours}[1]{\def\LeTitreDuCours{#1}}
-%\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
+\newcommand*{\coteDuCours}[1]{\def\LaCoteDuCours{#1}}
 \newcommand*{\auteurs}[1]{\def\NomDesAuteurs{#1}}
+%\newcommand*{\correcteur}[1]{\def\correcteur{#1}}
 \renewcommand*{\date}[1]{\def\LaDate{#1}}
 \newcommand\pageTitre{
     \thispagestyle{empty}
     \begin{titlepage}
-       \begin{center}      %Le tout sera centré
-      %{\Large \LeTitreDuCours\\}
-      %{\large \LaCoteDuCours\par}
+      \begin{center}      %Le tout sera centré
+      {\Large \LeTitreDuCours\\}
+      {\large \LaCoteDuCours\par}
       \vfill
       {\huge \bf \LeTitre\\}
       \vspace{2mm}
@@ -133,13 +140,17 @@
       {\LARGE Par \par}
       \bigskip{}
       {\large \NomDesAuteurs \par}
+      %\vfill
+      %{\LARGE Présenté à \par}
+      %\bigskip{}
+      %{\large \correcteur \par}
       \vfill
       {\Large Faculté des sciences \\ Département de physique}
       \vfill
       {\large \LaDate \\}
       {\large Université de Sherbrooke}
       %imprime les information \vfill permet d'équilibrer l'espacement vertical
-        \end{center}
+      \end{center}
   \end{titlepage}
   %Libère les nom de fonction
   \global\let\titre\relax
@@ -159,6 +170,7 @@
 %\titreDuCours{}
 %\coteDuCours{}
 %\auteurs{Olivier Bernard}
+%%\correcteur{Marie-Ève Boulanger}
 %\date{\today} 
 %\pageTitre %Place la page titre
 
