--- a/biblio.sty
+++ b/biblio.sty
@@ -15,6 +15,8 @@
 % \per donne fraction \
 % enombre donne x 10^{nombre}
 
+\usepackage{ragged2e}
+
 \usepackage{enumitem} %pour les liste à puces
 
 \usepackage{soul} %Permet de surligner du texte
